--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "node-sass": "^6.0.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sass": "^1.35.1"
   },
   "devDependencies": {},
   "scripts": {
     "start": "nodemon index.js",
     "build": "npm run sass",
     "prod": "concurrently \"npm run build\"  \"npm run start\"",
-    "watch":"node-sass -w public/assets/scss -o public/assets/css",
+    "watch": "node-sass -w public/assets/scss -o public/assets/css",
     "sass": "sass --watch public/assets/scss:public/assets/css"
   },
   "repository": {
